--- a/nbaplayer/package.json
+++ b/nbaplayer/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "nba": "^3.2.6",
     "react": "^15.6.1",
+    "react-autocomplete": "^1.5.7",
     "react-dom": "^15.6.1",
     "styled-components": "^2.1.0"
   },
